--- a/cholleti.html
+++ b/cholleti.html
@@ -9,6 +9,7 @@
         </font>
         <p>
             <img src="images/IMG-20240114-WA0063.jpg" width="300" height="400">
+             <img src="images/welcome-page.png">
         </p>
     </body>
 </html>
